--- a/01_introduction_python_programming/01_our_first_juptyer_notebook.ipynb
+++ b/01_introduction_python_programming/01_our_first_juptyer_notebook.ipynb
@@ -58,20 +58,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -99,6 +85,23 @@
     "# Exercise\n",
     "Add a new python code cell below and use the `print` command to print your name."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alberto\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Alberto\")"
+   ]
   }
  ],
  "metadata": {
@@ -117,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
