--- a/01_introduction_python_programming/05a_cropping_lists.ipynb
+++ b/01_introduction_python_programming/05a_cropping_lists.ipynb
@@ -670,11 +670,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "24759c70-7de0-4b3d-bbb1-b1332585bf49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D', 'C', 'B', 'A']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[3::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -686,27 +699,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1d19c119-8c63-48f4-a053-6c682cebeeb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D', 'G']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[3::3]"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "60d89b07-a770-4165-871e-349bea769ae5",
    "metadata": {},
    "source": [
-    "Please print out the seond-last character in `data`."
+    "Please print out the second-last character in `data`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f8e22a26-b9a2-4a84-b6f8-7c71d9d8195b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'H'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[-2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -718,11 +757,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "730cd539-8409-4870-a453-71891bab8e82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['G', 'D', 'A']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[-3::-3]"
+   ]
   }
  ],
  "metadata": {
@@ -741,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
