--- a/01_introduction_python_programming/05b_sorting_lists.ipynb
+++ b/01_introduction_python_programming/05b_sorting_lists.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "50f4cac1-b627-45af-a966-908e09812cfe",
    "metadata": {},
    "outputs": [],
@@ -144,15 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f05c6d8-1c7f-491c-8ff5-6a4f4375a6f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6b3c6eec-c6af-451a-bf3f-098463166531",
    "metadata": {},
    "outputs": [],
@@ -162,11 +154,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "3cec52eb-8d46-4431-8f28-387e98e8091c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_median(data):\n",
+    "    data.sort()\n",
+    "    if len(data) % 2 == 0:\n",
+    "        print(\"Even List\")\n",
+    "        print(\"List: \", data)\n",
+    "        median = (data[int(len(data)/2)-1] + data[int((len(data)/2)+1)-1]) / 2\n",
+    "    else:\n",
+    "        print(\"Odd List\")\n",
+    "        print(\"List: \", data)\n",
+    "        index = ((len(data)+1)/2) - 1\n",
+    "        median = data[int(index)]\n",
+    "    return median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "954267cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even List\n",
+      "List:  [3, 4, 4, 6, 8, 10]\n",
+      "Median is: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Median is:\", find_median(data1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d1cafd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can check our convoluted algorithms by using an in-built function of the statistics library\n",
+    "from statistics import median\n",
+    "print(median(data1))\n",
+    "print(median(data2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "80e825b9-e41b-479e-89a3-88e17c68b210",
    "metadata": {},
    "outputs": [],
@@ -188,11 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "f28d4aee-4cba-43fa-ab6d-adec918818b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 19, 19]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3.sort()\n",
+    "data3[:3]"
+   ]
   }
  ],
  "metadata": {
@@ -211,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
