--- a/01_introduction_python_programming/02_Math_in_python.ipynb
+++ b/01_introduction_python_programming/02_Math_in_python.ipynb
@@ -248,22 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "8"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pow(3, 2)"
+    "pow(2, 3)"
    ]
   },
   {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,6 +423,81 @@
     "\n",
     "x2 = 8\n",
     "y2 = 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a function to do so\n",
+    "def euclidean_distance (x1, y1, x2, y2):\n",
+    "    distance = math.sqrt(pow((x2-x1) ,2)+pow((y2-y1) ,2))\n",
+    "    return distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.54400374531753"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euclidean_distance(x1, y1, x2, y2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.54400374531753"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's double check our math syntax using an in-built method on the math library\n",
+    "math.dist([x1,y1], [x2,y2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.54400374531753"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Scipy also allows to calculate Euclidean distance \n",
+    "from scipy.spatial import distance\n",
+    "distance.euclidean([x1,y1], [x2,y2])"
    ]
   }
  ],
@@ -442,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
