--- a/01_introduction_python_programming/03_Basic_types.ipynb
+++ b/01_introduction_python_programming/03_Basic_types.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Basic types in python\n",
-    "We already learned there are numbers in python which can be stored in variables. We can also print out the type of a vairable.\n",
+    "We already learned there are numbers in python which can be stored in variables. We can also print out the type of a variable.\n",
     "\n",
     "See also\n",
     "* [Built-in types in python](https://docs.python.org/3/library/stdtypes.html)\n",
@@ -437,7 +437,7 @@
    "id": "bace6f17-fbfe-4a31-be97-7c274b24dba3",
    "metadata": {},
    "source": [
-    "`f`ormatting string in python can also be done like the following, simplifying our life."
+    "`f`ormatting string in python (f-strings) can also be done like the following, simplifying our life."
    ]
   },
   {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "nasty-guarantee",
    "metadata": {},
    "outputs": [],
@@ -487,11 +487,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "modified-advancement",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marie Curie, * 7 November 1867\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = first_name + \" \" + last_name + \", * \" + str(birthday_day) + \" \" + birthday_month + \" \" + str(birthday_year)\n",
+    "print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8954c928",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string==\"Marie Curie, * 7 November 1867\""
+   ]
   }
  ],
  "metadata": {
@@ -510,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
